--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
             <h1>Welcome To</h1>
             <h1><span class="orange-header">Abraham Ome</span> World!</h1>
             <h3>Building Climber and Train Stopper</h3>
-            <p>You might see me climbing, jumping and sropping train. You might see me fighting aliens alongside with Doctor
-                Strange and Tony Stark. That's why I am learning web developement.</p>
+            <p>You might see me climbing, jumping and sropping train. You might see me fighting aliens alongside with <i>Doctor
+            Strange and Tony Stark</i>. That's why I am learning web developement.</p>
                 <a class="link-button"
                 target="_blank" href="https://www.facebook.com/">Hire Me</a>
         </div>
         
         <div class="half-width"s><img src="images/Abraham-bg.png" alt="Abrahamd"></div>
     </section>
-   
+   <section class="dream-big">
+    <div class="half-width"><img src="images/Abraham-bg2.png"></div>
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a Web Developer</h2>
+        <p>I already learned basic HTML, CSS, Git etc. I have joined this course to learn react along side with previos topic. I hope I will be a full stack developer after completing this course.</p>
+        <a class="link-button" target="_blank" href="">Download Resume</a>
+    </div>
+   </section>
 </body>
 </html>
