--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-header">Abraham Ome</span> World!</h1>
@@ -24,7 +24,7 @@
         
         <div class="half-width"s><img src="images/Abraham-bg.png" alt="Abrahamd"></div>
     </section>
-   <section class="dream-big">
+   <section class="dream-big flexible-container">
     <div class="half-width"><img src="images/Abraham-bg2.png"></div>
     <div class="half-width">
         <h1>Dream Big</h1>
@@ -33,5 +33,28 @@
         <a class="link-button" target="_blank" href="">Download Resume</a>
     </div>
    </section>
+   <section class="experience-area">
+
+    <h1>Experience</h1>
+    <div class="flexible-container">
+        <div class="experience-item" id="full-stack-developer">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-header">2022-Present | Pro Level Developer</h3>
+            <p> I have enrolled in Web Development Course Program of Programming Hero corporation at 24 June, 2022. This course
+                help me to become a full stack developer. I have learned HTML, CSS, Bootstrap, React, MongoDB, .Net etc. I can
+                provide dynamic website as per as customer request.
+            </p>
+        </div>
+        <div class="experience-item" id="baby-web-developer">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-header">2020-2021 | BITM Learner</h3>
+            <p>I have started .Net framework program of BITM at 2020. I have learned .NET framework project in this program
+                including asp.net, MVC, windows and alo sql sever management. We have developed two small project during the
+                program. After the program I have decided to learn font-end development.</p>
+        </div>
+    </div>
+    
+   </section>
 </body>
+<footer><p>@ Abraham Ome 2022, a Programming Hero initiative</p></footer>
 </html>
